// Vitest Snapshot v1

exports[`components > sourcifyNotice > props > content > should render HTML 1`] = `
"<div id=\\"notice\\" role=\\"alert\\" class=\\"notice notice warning\\">
  <div class=\\"notice-content\\">
    <sourcify-text-stub size=\\"small\\" compact=\\"true\\" tag=\\"span\\"><span id=\\"notice-content\\" role=\\"region\\" class=\\"truncated\\"><strong>Hello world!</strong> This is a notice.</span></sourcify-text-stub>
  </div>
</div>"
`;

exports[`components > sourcifyNotice > props > content > should render correctly with content prop 1`] = `
"<div id=\\"notice\\" role=\\"alert\\" class=\\"notice notice warning\\">
  <div class=\\"notice-content\\">
    <sourcify-text-stub size=\\"small\\" compact=\\"true\\" tag=\\"span\\"><span id=\\"notice-content\\" role=\\"region\\" class=\\"truncated\\">This is a notice.</span></sourcify-text-stub>
  </div>
</div>"
`;

exports[`components > sourcifyNotice > props > content > should sanitize rendered HTML 1`] = `
"<div id=\\"notice\\" role=\\"alert\\" class=\\"notice notice warning\\">
  <div class=\\"notice-content\\">
    <sourcify-text-stub size=\\"small\\" compact=\\"true\\" tag=\\"span\\"><span id=\\"notice-content\\" role=\\"region\\" class=\\"truncated\\"> This is a notice.</span></sourcify-text-stub>
  </div>
</div>"
`;

exports[`components > sourcifyNotice > should render correctly 1`] = `
"<div id=\\"notice\\" role=\\"alert\\" class=\\"notice notice warning\\">
  <div class=\\"notice-content\\">
    <sourcify-text-stub size=\\"small\\" compact=\\"true\\" tag=\\"span\\">This is a notice.</sourcify-text-stub>
  </div>
</div>"
`;
